--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,9 @@ screenbpp=32
 fullscreen=0
 
 
+[sound]
+soundbuffer=88200
+
 
 [joystick0]
 enable=true
@@ -24,67 +27,74 @@ buttonp=JOY_BUTTON6
 
 [joystick1]
 enable=true
-buttonup=
-buttondown=
-buttonleft=
-buttonright=
-buttona=
-buttonb=
-buttonc=
-buttonl=
-buttonr=
-buttonx=
-buttonp=
+buttonup=JOY_BUTTON7
+buttondown=JOY_BUTTON8
+buttonleft=JOY_BUTTON9
+buttonright=JOY_BUTTON10
+buttona=JOY_BUTTON0
+buttonb=JOY_BUTTON1
+buttonc=JOY_BUTTON2
+buttonl=JOY_BUTTON3
+buttonr=JOY_BUTTON4
+buttonx=JOY_BUTTON5
+buttonp=JOY_BUTTON6
+
+
 [joystick2]
 enable=true
-buttonup=
-buttondown=
-buttonleft=
-buttonright=
-buttona=
-buttonb=
-buttonc=
-buttonl=
-buttonr=
-buttonx=
-buttonp=
+buttonup=JOY_BUTTON7
+buttondown=JOY_BUTTON8
+buttonleft=JOY_BUTTON9
+buttonright=JOY_BUTTON10
+buttona=JOY_BUTTON0
+buttonb=JOY_BUTTON1
+buttonc=JOY_BUTTON2
+buttonl=JOY_BUTTON3
+buttonr=JOY_BUTTON4
+buttonx=JOY_BUTTON5
+buttonp=JOY_BUTTON6
+
+
 [joystick3]
 enable=true
-buttonup=
-buttondown=
-buttonleft=
-buttonright=
-buttona=
-buttonb=
-buttonc=
-buttonl=
-buttonr=
-buttonx=
-buttonp=
+buttonup=JOY_BUTTON7
+buttondown=JOY_BUTTON8
+buttonleft=JOY_BUTTON9
+buttonright=JOY_BUTTON10
+buttona=JOY_BUTTON0
+buttonb=JOY_BUTTON1
+buttonc=JOY_BUTTON2
+buttonl=JOY_BUTTON3
+buttonr=JOY_BUTTON4
+buttonx=JOY_BUTTON5
+buttonp=JOY_BUTTON6
+
+
 [joystick4]
 enable=true
-buttonup=
-buttondown=
-buttonleft=
-buttonright=
-buttona=
-buttonb=
-buttonc=
-buttonl=
-buttonr=
-buttonx=
-buttonp=
+buttonup=JOY_BUTTON7
+buttondown=JOY_BUTTON8
+buttonleft=JOY_BUTTON9
+buttonright=JOY_BUTTON10
+buttona=JOY_BUTTON0
+buttonb=JOY_BUTTON1
+buttonc=JOY_BUTTON2
+buttonl=JOY_BUTTON3
+buttonr=JOY_BUTTON4
+buttonx=JOY_BUTTON5
+buttonp=JOY_BUTTON6
+
+
 [joystick5]
 enable=true
-buttonup=
-buttondown=
-buttonleft=
-buttonright=
-buttona=
-buttonb=
-buttonc=
-buttonl=
-buttonr=
-buttonx=
-buttonp=
-
+buttonup=JOY_BUTTON7
+buttondown=JOY_BUTTON8
+buttonleft=JOY_BUTTON9
+buttonright=JOY_BUTTON10
+buttona=JOY_BUTTON0
+buttonb=JOY_BUTTON1
+buttonc=JOY_BUTTON2
+buttonl=JOY_BUTTON3
+buttonr=JOY_BUTTON4
+buttonx=JOY_BUTTON5
+buttonp=JOY_BUTTON6
